# nope

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: add_api_keys_table.py  add_hash_ioc_types.py  add_ioc_audit_log.py  add_list_type.py  add_system_config.py  add_user_security_fields.py  add_wildcard_ioctype.py  ddbe1044b9dd_initial_schema.py
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  iocs.py  lists.py  settings.py  stats.py
backend/app/mcp/: tools.py
backend/app/middleware/: api_key_auth.py  rate_limit.py
backend/app/models/: __init__.py  api_key.py  audit.py  exclusion.py  ioc.py  ioc_audit.py  list.py  system_config.py  user.py
backend/app/schemas/: __init__.py  exclusion.py  ioc.py  list.py
backend/app/services/: audit_service.py  auth.py  config_service.py  edl_generator.py  encryption.py  exclusion_service.py  htpasswd.py  ioc_service.py  seeder.py  validation.py
backend/tests/: test_config.py  test_exclusions.py  test_security_integration.py  test_validation.py
backend/tests/api/: test_api_keys.py  test_login_lockout.py  test_rbac.py  test_user_password_validation.py
backend/tests/middleware/: test_api_key_auth.py  test_rate_limit.py
backend/tests/services/: test_account_lockout.py  test_encryption.py  test_exclusion_service.py  test_password_validation.py
backend/tests/test_mcp/: test_bulk_block.py  test_bulk_unblock.py  test_list_exclusions.py  test_tools.py  (+7 more)
(+32 files in other folders)
